tests/miniJava/neg/003536_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { if ( class ) { } else { } } }
